[metadata]
name = github-tools
version = 1.0.0
author = Sergii Lovygin
author_email = sergey.lovygin@yahoo.com
summary = set of github helpers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stanykey/github-tools
license = MIT
license_files = LICENSE
classifiers =
         Programming Language :: Python :: 3
         License :: OSI Approved :: MIT License
         Operating System :: OS Independent

[options]
python_requires = >=3.11
install_requires =
    click

[options.entry_points]
console_scripts =
    github-account = github_tools.account_switcher:cli
